crates/lib/src/scanner/snapshots/remind_lib__scanner__parser__tests__mixed_errors.snap
---
source: crates/lib/src/scanner/parser.rs
expression: "&result.errors"
---
[
    Parse {
        file: "src/mixed.rs",
        line: 1,
        col: 0,
        message: "expected forge prefix (e.g. 'github:') in 'bad'",
        span: 0..71,
        source_line: "// REMIND-ME-TO: fix pr_merged=bad tag_exists=github:a/b@>=1.0 issue_closed=github:c/d#5",
        expected: [],
        found: Some(
            "expected forge prefix (e.g. 'github:') in 'bad'",
        ),
    },
]
