crates/lib/src/scanner/snapshots/remind_lib__scanner__parser__tests__mixed_reminders.snap
---
source: crates/lib/src/scanner/parser.rs
expression: "&result.reminders"
---
[
    Reminder {
        file: "src/mixed.rs",
        line: 1,
        description: "fix",
        operations: [
            TagExists(
                RefRef {
                    forge_ref: ForgeRef {
                        forge: "github",
                        owner: "a",
                        repo: "b",
                    },
                    value: ">=1.0",
                },
            ),
            IssueClosed(
                IssueRef {
                    forge_ref: ForgeRef {
                        forge: "github",
                        owner: "c",
                        repo: "d",
                    },
                    number: 5,
                },
            ),
        ],
    },
]
