crates/lib/src/scanner/snapshots/remind_lib__scanner__parser__tests__snapshot_parse_error.snap
---
source: crates/lib/src/scanner/parser.rs
expression: result.errors
---
[
    Parse {
        file: "src/bad.rs",
        line: 1,
        col: 0,
        message: "expected forge prefix (e.g. 'github:') in 'invalid_value'",
        span: 0..32,
        source_line: "// REMIND-ME-TO: fix this pr_merged=invalid_value",
        expected: [],
        found: Some(
            "expected forge prefix (e.g. 'github:') in 'invalid_value'",
        ),
    },
]
