crates/lib/src/scanner/snapshots/remind_lib__scanner__parser__tests__snapshot_single_reminder.snap
---
source: crates/lib/src/scanner/parser.rs
expression: result.reminders
---
[
    Reminder {
        file: "src/tls.rs",
        line: 1,
        description: "Remove custom TLS config when the fix lands",
        operations: [
            PrMerged(
                IssueRef {
                    forge_ref: ForgeRef {
                        forge: "github",
                        owner: "hyper-rs",
                        repo: "hyper",
                    },
                    number: 3210,
                },
            ),
            TagExists(
                RefRef {
                    forge_ref: ForgeRef {
                        forge: "github",
                        owner: "hyper-rs",
                        repo: "hyper",
                    },
                    value: ">=1.5.0",
                },
            ),
        ],
    },
]
